# WhichBin

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/whichbin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best.param  synset.txt
app/src/main/java/com/example/whichbin/: ActivityCollector.kt  BaseActivity.kt  CircleImageView.java  MainActivity.kt  UserData.kt  WelcomeActivity.kt
app/src/main/java/com/example/whichbin/Login/: LoginActivity.kt  RegisterActivity.kt
app/src/main/java/com/example/whichbin/classification/: MobileNet.kt  PhotoActivity.kt  PhotoUtil.kt  RealTimeActivity.kt
app/src/main/jni/: CMakeLists.txt  mobileNet_jni.cpp  ts.id.h
app/src/main/res/layout/: activity_feedback.xml  activity_login.xml  activity_main.xml  activity_photo.xml  activity_place.xml  activity_real_time.xml  activity_register.xml  activity_welcome.xml  feedback_item.xml  fragment.xml  fragment_cyclogedic.xml  fragment_home.xml  fragment_setting.xml  items.xml  popu_garbage.xml  popu_layout.xml  popu_question.xml  popu_ranking.xml  rank_item.xml  search_item.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/whichbin/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+27 files in other folders)
